--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 animation-name: fadein;
 animation-timing-function: ease-in;
 animation-duration: 400ms;
-animation-delay: 300ms;
+animation-delay: 1s;
 animation-fill-mode: forwards;
 
 
@@ -13,7 +13,7 @@ animation-fill-mode: forwards;
     100%{opacity:1;}
 }
 @keyframes fadedown{
-    0%{transform: translateY(-400px);opacity: 0;}
+    0%{transform: translateY(-60px);opacity: 0;}
     100%{transform:translateY(0px);opacity: 1;}
 }
 #animate{
