--- a/src/App.css
+++ b/src/App.css
@@ -21,14 +21,14 @@ animation-fill-mode: forwards;
  animation-name: fadein;
     animation-timing-function: ease-in;
     animation-duration: 800ms;
-    animation-delay: 400ms;
+    animation-delay: 600ms;
     animation-fill-mode: both;
 }
 #animatethree{
     animation-name: fadein;
     animation-timing-function: ease-in;
     animation-duration: 800ms;
-    animation-delay: 600ms;
+    animation-delay: 800ms;
     animation-fill-mode: both;
 }
 #animatefour{
@@ -42,7 +42,7 @@ animation-fill-mode: forwards;
  animation-name: fadein;
     animation-timing-function: ease-in;
     animation-duration: 500ms;
-    animation-delay: 100ms;
+    animation-delay: 300ms;
     animation-fill-mode: both;
 }
 #animate2{
@@ -77,7 +77,7 @@ animation-fill-mode: forwards;
      animation-name: fadein;
     animation-timing-function: ease-in;
     animation-duration: 500ms;
-    animation-delay: 600ms;
+    animation-delay: 800ms;
     animation-fill-mode: both;
 }
 #animate7{
@@ -147,7 +147,7 @@ animation-fill-mode: forwards;
       animation-name: fadein;
     animation-timing-function: ease-in;
     animation-duration: 500ms;
-    animation-delay: 1.6s;
+    animation-delay: 1.8s;
     animation-fill-mode: both;
 }
 #animate17{
@@ -205,7 +205,7 @@ opacity: 0;
     100%{opacity: 1;}
 }
 #ani2{
-    color: red;
+    color: aqua;
     animation-name: text;
     animation-timing-function: ease-in;
     animation-duration: 600ms;
@@ -213,6 +213,6 @@ opacity: 0;
     animation-fill-mode: forwards;
 }
 @keyframes text{
-    0%{color: red;}
+    0%{color: aqua;}
     100%{color:white}
 }
