--- a/src/App.css
+++ b/src/App.css
@@ -225,3 +225,11 @@ opacity: 0;
     0%{opacity: 1;}
     100%{opacity: 0;}
 }
+#ani20{
+    animation-name: opac;
+animation-timing-function: ease-in;
+animation-delay: 3s;
+animation-duration: 1.2s;
+animation-fill-mode: forwards;
+opacity: 0;
+}
